# roles-bot

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md
src/: autorole.rs  constants.rs  database.rs  error.rs  main.rs  reaction.rs
