[package]
name = "roles-bot"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
volty = { path = "../volty"}

async-trait = "0.1"
dotenvy = "0.15"
emojis = "0.6"
env_logger = "0.10"
indexmap = "2.0"
once_cell = "1.18"
regex = "1.9"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
