[package]
name = "roles-bot"
version = "0.1.0"
edition = "2024"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
volty = { path = "../volty"}

dotenvy = "0.15"
emojis = "0.6"
env_logger = "0.11"
futures = "0.3"
indexmap = "2.7"
mongodb = "3.1"
once_cell = "1.20"
regex = "1.11"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
