[package]
name = "roles-bot"
version = "0.1.0"
edition = "2024"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
volty = { git = "https://github.com/TheBobBobs/volty"}

dotenvy = "0.15"
emojis = "0.8"
env_logger = "0.11"
indexmap = "2.13"
once_cell = "1.21"
regex = "1.12"
rusqlite = { version = "0.38.0", features = [ "bundled" ] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

signal-hook = "0.4"
